--- a/standard.bib
+++ b/standard.bib
@@ -288,3 +288,15 @@ pages = {1--12},
 title = {{M-Isomap : Orthogonal Constrained Marginal Isomap for Nonlinear Dimensionality Reduction}},
 year = {2012}
 }
+
+@article{Cui2012,
+author = {Cui, Wencheng and Chen, Shuang and Yu, Tianshu and Ren, Lijie},
+doi = {10.1109/ICCSNT.2012.6526153},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/Feature Extraction of X-ray Chest Image.pdf:pdf},
+isbn = {9781467329644},
+journal = {Proceedings of 2nd International Conference on Computer Science and Network Technology, ICCSNT 2012},
+keywords = {X-ray image,feature extraction,kernel principal component analysis,reduce dimensions},
+pages = {1263--1266},
+title = {{Feature extraction of X-ray chest image based on KPCA}},
+year = {2012}
+}
