--- a/standard.bib
+++ b/standard.bib
@@ -300,3 +300,16 @@ pages = {1263--1266},
 title = {{Feature extraction of X-ray chest image based on KPCA}},
 year = {2012}
 }
+
+@article{Jiang2011,
+author = {Jiang, Shengli and Zhang, Junying and Kuang, Chunlin},
+doi = {10.1109/ICEICE.2011.5777932},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/A linear maximum variance unfolding algorithm and its application in image recognition.pdf:pdf},
+isbn = {9781424480395},
+journal = {2011 International Conference on Electric Information and Control Engineering, ICEICE 2011 - Proceedings},
+keywords = {Dimensionality reduction,Manifold learning,Maximum variance unfolding,Pattern recognition},
+number = {61070137},
+pages = {36--39},
+title = {{A linear maximum variance unfolding algorithm and its application in image recognition}},
+year = {2011}
+}
