--- a/standard.bib
+++ b/standard.bib
@@ -313,3 +313,22 @@ pages = {36--39},
 title = {{A linear maximum variance unfolding algorithm and its application in image recognition}},
 year = {2011}
 }
+
+@article{COIFMAN20065,
+title = "Diffusion maps",
+journal = "Applied and Computational Harmonic Analysis",
+volume = "21",
+number = "1",
+pages = "5 - 30",
+year = "2006",
+note = "",
+issn = "1063-5203",
+doi = "http://dx.doi.org/10.1016/j.acha.2006.04.006",
+author = "Ronald R. Coifman and Stéphane Lafon",
+keywords = "Diffusion processes",
+keywords = "Diffusion metric",
+keywords = "Manifold learning",
+keywords = "Dimensionality reduction",
+keywords = "Eigenmaps",
+keywords = "Graph Laplacian"
+}
