--- a/proposal_report.tex
+++ b/proposal_report.tex
@@ -35,10 +35,12 @@
 	\section{Literature Review}
 	The review done by \cite{Mahendran2011} for the automation of bone fracture detection indicated that there are various techniques in pattern recognition that comes in the form of unsupervised, reinforcement and supervised. The challenge found in classification are that there is an information overload and size and dimension are a concern. The problem with information overload is that it becomes to computationally expensive to find crucial information needed for the classification. The size and dimension of the information is a concern because large sizes of data contributes to the number of dimensionality, with high number of dimensions it presents a challenge in the classification process and in turn may require more computational resources.
 	
-	\subsection{\textbf{Unsupervised Learning}}
-	Unsupervised learning is defined by the not needing to train the algorithm in order for it to classify data into different categories. This process allows the algorithm to learn more about the given data. There are two categories in unsupervised learning which are clustering and association. Popular unsupervised algorithms are k-means and Apriori algorithm. The clustering technique is an example of un-supervised learning, since the technique analyses a given set of data and groups the data that have similar characteristics together. One of the main advantages of clustering is that it is adaptable when given new data sets compared to classification. It is also useful for singling out useful features. There are various types of clustering methods, namely, partitioning, hierarchical, density-based, grid-based, model-based and constraint-based. Other unsupervised learning techniques includes Principal Component Analysis, Independent Component Analysis, Non-Negative Matrix Factorization and Singular Value Decomposition. 
+	\subsection{Curse of Dimensionality}
+	The main problematic factor affecting the performance in classification is the curse of dimensionality. The curse of dimensionality is a problem due to the sparsity of high dimensional spaces, in which an absurd amount of training data is needed in order to get low variance  estimators \cite{intrator_feature_1992}.
 	
-	\subsection{\textbf{Dimensionality Reduction}}
+	Feature extraction with supervised learning algorithms may seem most desired compared to unsupervised learning algorithms, since supervised learning algorithms have more information about the problem and features. However, unsupervised methods do not suffer the curse of dimensionality as supervised learning does since it makes use of local measures to optimally estimate a single dimensional projection function \cite{intrator_feature_1992}.
+	
+	\subsection{Dimensionality Reduction}
 	The collection of digital data has increased drastically over the past decade, which led to datasets having high dimensionality. The high dimensionality found in datasets affected the performance of data processing algorithms. This is known as the curse of dimensionality \cite{Center2002}. Dimensionality reduction is a process targeted at reducing the dimensionality of the considered dataset by reducing the number of random variables. This process can be divided into two stages, namely Feature Selection and Feature Extraction. Both these stages are crucial for automating bone fracture detection. There are two types of dimensionality techniques, convex and concave techniques. This section focuses on convex techniques. Convex techniques optimizes objective functions that do not contain any local optima, which means that the solution space is convex \cite{Boyd2010}. The objective function is usually in a generalized Rayleigh quotient, which can be expressed in the following form: 
 	\begin{equation}
 	\phi(\textbf{Y}) = \frac{\textbf{Y}^{T}\textbf{AY}}{\textbf{Y}^{T}\textbf{BY}}
@@ -75,7 +77,7 @@
 	geodesic distances between datapoints \cite{Zhang2012}. This means that the geodesic distance between $x_i$ and $x_j$ imitates as much of the Euclidean between the low-dimensional representation yi and yj as possible. The low-dimensional representation $y_i$ and $y_j$ are computed using the classical scaling technique, which results in a pairwise geodesic distance matrix. The drawback of the Isomap technique is that it constructs erroneous connections in the neighbourhood graph, G which can affect the performance of the Isomap.
 	
 	\subsubsection{Kernel PCA}
-	Kernel Principal Component Analysis (KPCA) is a technique that makes use kernel functions to map data into high dimensional space, by which the space is manipulated using linear PCA \cite{Cui2012}. KPCA makes use of a mapping function by which it computes the kernel matrix $K$ of datapoints $x_i$ and $x_j$. The enteries for the kernel matrix is defined by Equation \ref{eq: kernel matrix enteries}.
+	Kernel Principal Component Analysis (KPCA) is a technique that makes use kernel functions to map data into high dimensional space, by which the space is manipulated using linear PCA \cite{Cui2012}. KPCA makes use of a mapping function by which it computes the kernel matrix $K$ of datapoints $x_i$ and $x_j$. The entries for the kernel matrix is defined by Equation \ref{eq: kernel matrix enteries}.
 	\begin{equation}
 		k_{ij} = K(x_i, x_j)
 		\label{eq: kernel matrix enteries}
@@ -125,19 +127,50 @@
 			(3) \textbf{K}_{ii} - 2\textbf{K}_{ij} + \textbf{K}_{jj} = ||\textbf{x}_i - \textbf{x}_j||^{2}, \eta_{ij} = 1
 		\end{cases}
 	\end{equation} 
-	From the first condition $\textbf{K} \geq 0$, it indicates that matrix $\textbf{K}$ is required to be positive semi-definite, since SDP is convex.
+	From the first condition $\textbf{K} \geq 0$, it indicates that matrix $\textbf{K}$ is required to be positive semi-definite, since SDP is convex. Thus the low-dimensional representation is obtained by solving the SDP. The main weakness found in MVU is the addition of constraints during optimization, which can result to unsuccessful unfolding of manifold. Although, despite its main weakness it is applied to sensor location and DNA micro-array data analysis \cite{van2009dimensionality}.
 	
-	Similar to PCA, Independent Component Analysis (ICA) is a technique which analyses data of multidimensional high order. It identifies the independent implicit information in order to remove redundant as well as extract independent information \cite{7852869}. 
+	\subsubsection{Diffusion Maps}
+	Diffusion Maps (DM) is a technique based on defining Markov Random Walk graph \cite{COIFMAN20065}. Markov Random Walk is a description of a random process that consists of the successful random steps applied to a mathematical space. The measurement for the proximity of the datapoints is attained by performing the random walk for a number of iterations. Through the number of iterations, the diffusion distances are obtained in which it is used for the representation of the data in the lower dimension. The purpose of the diffusion distance is to integrate over all the paths presented in the graph. For the construction the diffusion maps graph, the weights of the edges are computed using the Gaussian kernel function. The entries to form matrix \textbf{W} is expressed in Equation \ref{eq: W entries}.
+	\begin{equation}
+		w_{ij} = e^{-\frac{||\textbf{x}_i - \textbf{x}_j||^2}{2\sigma^2}}
+		\label{eq: W entries}
+	\end{equation}
+	where
+	\[\sigma = \text{variance of the Gaussian}\]
+	The normalization of matrix \textbf{W} is necessary defining the forward transition probability matrix of dynamical process. The normalized matrix \textbf{W} results in matrix $\textbf{P}^{(1)}$ which is formed using Equation \ref{eq: probability transition}.
+	\begin{equation}
+		p_{ij}^{(1)} = \frac{w_{ij}}{\sum_{k}w_{ik}}
+		\label{eq: probability transition}
+	\end{equation}
+	By making use of the probability matrix for t iteration $\textbf{P}^{(t)}$, the diffusion distance can be defined in Equation \ref{eq: diffusion distance}.
+	\begin{equation}
+		D^{(t)}(\textbf{x}_i, \textbf{x}_j) = \sqrt{\sum_{k}\frac{(p_{ik}^{(t)}-p_{jk}^{(t)})^2}{\psi(\textbf{x}_k)^{(0)}}}
+		\label{eq: diffusion distance}
+	\end{equation}
+	where
+	\begin{align*}
+		\psi(\textbf{x}_i)^{(0)} &= \frac{m_i}{\sum_{j}m_j}
+	\end{align*}
+	$m_i$ is the degree of the node $\textbf{x}_i$ and can be further defined as follows:
+	\[m_i = \sum_{j}p_{ij}\]
+	The eigenproblem in which diffusion maps solves is expressed in Equation \ref{eq: diffusion eigenproblem}. 
+	\begin{equation}
+		\textbf{P}^{(t)}\textbf{v} = \lambda\textbf{v}
+		\label{eq: diffusion eigenproblem}
+	\end{equation}
+	Since the graph is fully connected, the largest eigenvalue is trivial, therefore the corresponding eigenvalue is discarded. The low dimensional representation can be expressed in Equation \ref{eq: low-dimension diffusion}.
+	\begin{equation}
+		\textbf{Y} = \left\{\lambda_2\textbf{v}_2, \lambda_3\textbf{v}_3,...,\lambda_{d+1}\textbf{v}_{d+1} \right\}
+		\label{eq: low-dimension diffusion}
+	\end{equation}
+	where
+	\begin{align*}
+		\lambda &= \text{eigenvalues}\\
+		\textbf{v} &= \text{eigenvectors}
+	\end{align*}
+	The applications that diffusion maps have been applied to are shape matching and gene expression analysis.
 	
-	Kernel Principal Component Analysis (KPCA) is again similar to the regular PCA, however the difference lies in its application in which KPCA is applied in a none-linear manner. As a result, it creates a none-linear mapping scheme to maximize the variance within the considered data \cite{KPCA_2016}.
-	
-	Graph-Based Kernel Principal Component Analysis are techniques that are prominent none-linear techniques that makes use of a cost function to construct a low-dimensional representation of the considered data. Such techniques includes Locally Linear Embedding (LLE), Hessian LLE, Laplacian Eigenmaps and Local Tangent Space Alignment (LTSA). 
-	
-	Linear Discriminant Analysis (LDA)  is a method that finds linear combinations of features that can be characterized two or more classes. It is commonly used in statistics, pattern recognition and machine learning \cite{LDA_2016}.
-	
-	General Discriminant Analysis (GDA) is similar to LDA in terms of its objectives, in which it is to find crucial features in the considered data such that it lowers the dimensionality of the data. GDA operates with non-linear discriminants by which it makes use of a kernel function. Its underlying theory is similar to that of support vector machine (SVM).
-	
-	\subsubsection{\textbf{Supervised Learning}}
+	\subsection{Supervised Learning}
 	The goal of supervised learning to to create a mapping function, such that when given new input data a prediction of the output data can be made. The mapping function is generated by with given data sets that consists of inputs with its corresponding outputs. Linear regression, random forest and SVM are popular supervised algorithms.
 	Support Vector Machine (SVM) is a classifier mainly used for complex classification purposes. In order to separate new data into specified categories, SVM is trained with given labelled data making it supervised learning \cite{Rebentrost2014}. An implementation of SVM classifiers is done in \cite{saha_classifying_2016} where the it is used to classify X-Ray images of the body into five categories, namely, head-neck, body, upper-limb and true-negative. Spatial Pyramid Histogram are used to decipher the medical images which is then used to train the Chi-Kernel based SVM. In general, SVM is used for binary classification \cite{Rebentrost2014}.
 	
@@ -147,10 +180,7 @@
 	
 	Another AI algorithm to be considered for medical diagnosis is deep learning. According to the author in \cite{LeCun2015}, deep learning has the ability to combat complex problems whereas SVM would not be able to, since SVM works better with small data sets that have few outliers. However, the downfall of deep learning is its learning process, in which it can become tedious and computational demanding. Thus for small data sets, it is more plausible to use an off-shelf classifier such as SVM. 
 	
-	\subsubsection{\textbf{Curse of Dimensionality}}
-	The main problematic factor affecting the performance in classification is the curse of dimensionality. The curse of dimensionality is a problem due to the sparsity of high dimensional spaces, in which an absurd amount of training data is needed in order to get low variance  estimators \cite{intrator_feature_1992}.
-	
-	Feature extraction with supervised learning algorithms may seem most desired compared to unsupervised learning algorithms, since supervised learning algorithms have more information about the problem and features. However, unsupervised methods do not suffer the curse of dimensionality as supervised learning does since it makes use of local measures to optimally estimate a single dimensional projection function \cite{intrator_feature_1992}.
+
 	
 	\subsubsection{\textbf{Combination Techniques}}
 	There have been studies done which combine the algorithms of supervised and unsupervised. The authors of \cite{neagoe_new_2014} proposed a method which combines both supervised and unsupervised algorithms, name.
