--- a/proposal_report.tex
+++ b/proposal_report.tex
@@ -192,9 +192,9 @@
 	There are existing pattern recognition techniques available which have the ability to detect the presence of bone fracture. However, there are large amounts of datasets that is passed into the techniques. These datasets create dimensionality, the more datasets there are the higher the number of dimensionality there are. High number of dimensionalities affects the performance of the techniques. This is known as the curse of dimensionality. 
 	
 	\section{Proposed Methodology}
-	The objective of this research is to propose a system which consists of two steps in order to determine the presence of a fracture within medical x-ray images as the system's input. The first step is dimensionality reduction and the second step is the automation of the decision making process using neural networks. The dimensionality reduction step is intended to map the data from a high dimensionality to a low dimensionality without loosing any critical information needed for the input to the neural network. 
+	The objective of this research is to propose a system which consists of two steps in order to determine the presence of a fracture within medical x-ray images. The first step is dimensionality reduction and the second step is the automation of the decision making process using neural networks. The dimensionality reduction step is intended to map the data from a high dimensionality to a low dimensionality without loosing any critical information needed for the input to the neural network. The system overview is illustrated in Figure \ref{fig:system overview}. The two-step system is compared to a single neural network, whereby the its performance is evaluated. The performance is measured by accuracy, error rate and execution speed. 
 	
-	The proposed approach adopted for this research is illustrated in Figure \ref{fig:system overview}. The proposed system consists of an image processing technique, dimensionality reduction and an automated decision making technique. The proposed system mainly focuses on the dimensionality reduction and automated decision making techniques. The objective of the proposed system is to determine the effects of using two steps compared to using one for the detection of bone fracture. The evaluation of the effects of the systems is done by observing the execution speed, classification accuracy and error rate.
+	The objective of the proposed system is to determine the effects of using two steps compared to using one for the detection of bone fracture. The evaluation of the effects of the systems is done by observing the execution speed, classification accuracy and error rate.
 	
 	\begin{figure}[!h]
 		\centering
