--- a/proposal_report.tex
+++ b/proposal_report.tex
@@ -192,16 +192,22 @@
 	There are existing pattern recognition techniques available which have the ability to detect the presence of bone fracture. However, there are large amounts of datasets that is passed into the techniques. These datasets create dimensionality, the more datasets there are the higher the number of dimensionality there are. High number of dimensionalities affects the performance of the techniques. This is known as the curse of dimensionality. 
 	
 	\section{Proposed Methodology}
-	The objective of this research is to propose a system which consists of two steps in order to determine the presence of a fracture within medical x-ray images. The first step is dimensionality reduction and the second step is the automation of the decision making process using neural networks. The dimensionality reduction step is intended to map the data from a high dimensionality to a low dimensionality without loosing any critical information needed for the input to the neural network. The system overview is illustrated in Figure \ref{fig:system overview}. The two-step system is compared to a single neural network, whereby the its performance is evaluated. The performance is measured by accuracy, error rate and execution speed. 
-	
-	The objective of the proposed system is to determine the effects of using two steps compared to using one for the detection of bone fracture. The evaluation of the effects of the systems is done by observing the execution speed, classification accuracy and error rate.
-	
+	The objective of this research is to propose a system which consists of two steps in order to determine the presence of a fracture within medical x-ray images. The first step is dimensionality reduction and the second step is the automation of the decision making process using neural networks. The dimensionality reduction step is intended to map the data from a high dimensionality to a low dimensionality without loosing any critical information needed for the input to the neural network. The system overview is illustrated in Figure \ref{fig:system overview}.
 	\begin{figure}[!h]
 		\centering
 		\includegraphics[scale=0.23]{system_overview.png}
-		\caption{Block Diagram illustrating an overview of the system }
+		\caption{Block Diagram illustrating an overview of the two-step system }
 		\label{fig:system overview}
 	\end{figure}
+	\newline
+	In addition, to developing the two-step system an image pre-processing technique is introduced to the system. This can be seen in Figure \ref{fig:system overview_2}.
+	\begin{figure}[!h]
+		\centering
+		\includegraphics[scale=0.23]{system_overview_2.png}
+		\caption{Block Diagram illustrating an overview of the system with image pre-processing }
+		\label{fig:system overview_2}
+	\end{figure}
+	The performance for both the systems are compared to the performance of a single step neural network. The performance is evaluated by accuracy of detection, error rate, and execution speed.
 	
 	\subsection{Feature Selection}
 	Feature selection is performed through the process of image processing, whereby the Canny and Sobel techniques are utilized. The features selected are shown in Table \ref{feature_selection}.
