--- a/proposal_report.tex
+++ b/proposal_report.tex
@@ -322,7 +322,9 @@
 		Y = M^T \times \text{Original Data}
 	\end{equation}
 	
-	\subsection{Artificial Neural Network}
+	\subsection{Neural Network}
+	An artificial neural network consists of three different layers: input layer, hidden layer and output layer. There are weighted connections which link the three layers together. The weights are factors which assist with the automated decision making process. The weights values are determined through a training process. The chosen neural network training method is back-propagation.  
+	
 	The automation of bone fracture detection can be done by utilizing a neural network technique. The implementation of the neural network technique consists of two stages. The first stage is the training of the technique and the second is the classification of the bone fracture. The neural network technique has the ability to process the raw data from the selected features, however since the raw data has high dimensionality it has the potential to hinder the performance of both stages in the neural network technique. This will be observed during execution. The neural network technique in consideration is Back Propagation Neural Network, however this choice of technique is subjected to change.
 	
 	\section{Time Management}
